PokemonPackage/main/default/objects/Ability__c/Ability__c.object-meta.xml
<CustomObject>
    <label>Ability</label>
    <nameField>
        <label>Ability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Abilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>