PokemonPackage/main/default/objects/Ability__c/fields/Ability_Name__c.field-meta.xml
<CustomField>
    <fullName>Ability_Name__c</fullName>
    <label>Ability Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>