PokemonPackage/main/default/objects/Ability__c/fields/Base_Damage__c.field-meta.xml
<CustomField>
    <fullName>Base_Damage__c</fullName>
    <label>Base Damage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>