PokemonPackage/main/default/objects/Ability__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <formula>Base_Damage__c + (Base_Damage__c *Pokemon__r.Level__c*0.7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Damage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>