PokemonPackage/main/default/objects/Ability__c/fields/MP_Cost__c.field-meta.xml
<CustomField>
    <fullName>MP_Cost__c</fullName>
    <label>MP Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>