PokemonPackage/main/default/objects/Ability__c/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <label>Pokemon</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Abilities</relationshipLabel>
    <relationshipName>Abilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>